--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
       <div class="container pt-10 pt-md-14">
         <div class="row gx-2 gy-10 align-items-center">
           <div class="col-md-10 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start order-2 order-lg-0" data-cues="slideInDown" data-group="page-title" data-delay="600">
-            <h1 class="display-1 mb-5 mx-md-10 mx-lg-0">Create a powerful but effortless website for <br /><span class="typer text-primary text-nowrap" data-delay="100" data-words="your business.,your portfolio.,your startup.,digital marketing."></span><span class="cursor text-primary" data-owner="typer"></span></h1>
+            <h1 class="display-1 mb-5 mx-md-10 mx-lg-0"><span class="typer text-primary text-nowrap" data-delay="100" data-words="Kalmak,Zıbarmak,Ticaret Yapmak,Yemek Yemek."></span><span class="cursor text-primary" data-owner="typer"></span><br>için en iyi yer.</h1>
             <p class="lead fs-23 mb-7">Build your website in minutes with the help of countless amazing features of Sandbox.</p>
             <div class="d-flex justify-content-center justify-content-lg-start mb-4" data-cues="slideInDown" data-group="page-title-buttons" data-delay="900">
               <span><a class="btn btn-lg btn-primary rounded-pill me-2 scroll" href="#demos">Check Demos</a></span>
