--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <!-- /.row -->
             <div class="position-relative mt-n20 mb-20" data-cue="fadeIn" data-delay="1800">
               <div class="btn btn-circle btn-fuchsia disabled ripple position-absolute counter-wrapper flex-column d-none d-md-flex" style="bottom: 0; right: -8%; width: 120px; height: 120px;">
-                <h3 class="fs-26 text-white mt-n1 mb-0">NEW</h3>
+                <h3 class="fs-26 text-white mt-n1 mb-0">Onaylı</h3>
                 <p>Demos</p>
               </div>
             </div>
@@ -425,15 +425,15 @@
         <div class="row mb-10">
           <div class="col-md-9 col-lg-7 col-xl-6 col-xxl-5 mx-auto">
             <div class="counter-wrapper">
-              <h3 class="fs-70 mb-3 text-primary text-center counter">21</h3>
+              <h3 class="fs-70 mb-3 text-primary text-center counter">1000+</h3>
             </div>
-            <h2 class="display-3 mb-3 text-center mb-0">Functional, impressive and rich demos to start with</h2>
+            <h2 class="display-3 mb-3 text-center mb-0">Mutlu Müşteri</h2>
           </div>
           <!-- /column -->
         </div>
         <!-- /.row -->
         <div class="demos-wrapper">
-          <h2 class="fs-16 text-uppercase text-muted mb-6 text-center">New Demos</h2>
+          <h2 class="fs-16 text-uppercase text-muted mb-6 text-center">Odalarımız</h2>
           <div class="project mb-10">
             <div class="card bg-soft-grape">
               <div class="card-body ps-xl-12 py-0 overflow-hidden">
@@ -441,11 +441,11 @@
                   <div class="col-lg-7">
                     <div class="row gx-7">
                       <div class="col-6">
-                        <figure class="itooltip itooltip-grape mt-9" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo18.html" target="_blank"><img class="shadow-lg rounded-top" src="./assets/img/demos/d18-1.jpg" srcset="./assets/img/demos/d18-1@2x.jpg 2x" alt="" /></a></figure>
+                        <figure class="itooltip itooltip-grape mt-9" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo18.html" target="_blank"><img class="shadow-lg rounded-top" src="https://i.hizliresim.com/ngpc8uw.jpeg" srcset="https://i.hizliresim.com/ngpc8uw.jpeg 2x" alt="" /></a></figure>
                       </div>
                       <!-- /column -->
                       <div class="col-6">
-                        <figure class="itooltip itooltip-grape" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo18.html" target="_blank"><img class="shadow-lg rounded-bottom" src="./assets/img/demos/d18-2.jpg" srcset="./assets/img/demos/d18-2@2x.jpg 2x" alt="" /></a></figure>
+                        <figure class="itooltip itooltip-grape" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo18.html" target="_blank"><img class="shadow-lg rounded-bottom" src="https://i.hizliresim.com/ngpc8uw.jpeg" srcset="https://i.hizliresim.com/ngpc8uw.jpeg 2x" alt="" /></a></figure>
                       </div>
                       <!-- /column -->
                     </div>
@@ -453,7 +453,7 @@
                   </div>
                   <!-- /column -->
                   <div class="col-lg-5 d-none d-lg-block">
-                    <h2 class="post-title fs-30 mb-4">Demo Layout XVIII</h2>
+                    <h2 class="post-title fs-30 mb-4">Salon</h2>
                     <ul class="icon-list bullet-grape row ms-0 gy-2">
                       <li class="col-md-6"><span><i class="uil uil-check"></i></span><span>Network, Marketing</span></li>
                       <li class="col-md-6"><span><i class="uil uil-check"></i></span><span>SVG icons</span></li>
@@ -478,11 +478,11 @@
                   <div class="col-lg-7">
                     <div class="row gx-7">
                       <div class="col-6">
-                        <figure class="itooltip itooltip-fuchsia mt-9" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo19.html" target="_blank"><img class="shadow-lg rounded-top" src="./assets/img/demos/d19-1.jpg" srcset="./assets/img/demos/d19-1@2x.jpg 2x" alt="" /></a></figure>
+                        <figure class="itooltip itooltip-fuchsia mt-9" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo19.html" target="_blank"><img class="shadow-lg rounded-top" src="https://i.hizliresim.com/7k0itj1.jpeg" srcset="https://i.hizliresim.com/7k0itj1.jpeg" alt="" /></a></figure>
                       </div>
                       <!-- /column -->
                       <div class="col-6">
-                        <figure class="itooltip itooltip-fuchsia" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo19.html" target="_blank"><img class="shadow-lg rounded-bottom" src="./assets/img/demos/d19-2.jpg" srcset="./assets/img/demos/d19-2@2x.jpg 2x" alt="" /></a></figure>
+                        <figure class="itooltip itooltip-fuchsia" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo19.html" target="_blank"><img class="shadow-lg rounded-bottom" src="https://i.hizliresim.com/7k0itj1.jpeg" srcset="https://i.hizliresim.com/7k0itj1.jpeg" alt="" /></a></figure>
                       </div>
                       <!-- /column -->
                     </div>
@@ -490,7 +490,7 @@
                   </div>
                   <!-- /column -->
                   <div class="col-lg-5 d-none d-lg-block">
-                    <h2 class="post-title fs-30 mb-4">Demo Layout XIX</h2>
+                    <h2 class="post-title fs-30 mb-4">Salon ama 3D</h2>
                     <ul class="icon-list bullet-fuchsia row ms-0 gy-2">
                       <li class="col-md-6"><span><i class="uil uil-check"></i></span><span>Agency, Startup</span></li>
                       <li class="col-md-6"><span><i class="uil uil-check"></i></span><span>Gradient image</span></li>
@@ -515,11 +515,11 @@
                   <div class="col-lg-7">
                     <div class="row gx-7">
                       <div class="col-6">
-                        <figure class="itooltip itooltip-purple mt-9" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo20.html" target="_blank"><img class="shadow-lg rounded-top" src="./assets/img/demos/d20-1.jpg" srcset="./assets/img/demos/d20-1@2x.jpg 2x" alt="" /></a></figure>
+                        <figure class="itooltip itooltip-purple mt-9" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo20.html" target="_blank"><img class="shadow-lg rounded-top" src="https://i.hizliresim.com/l5p6m38.jpeg" srcset="https://i.hizliresim.com/l5p6m38.jpeg 2x" alt="" /></a></figure>
                       </div>
                       <!-- /column -->
                       <div class="col-6">
-                        <figure class="itooltip itooltip-purple" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo20.html" target="_blank"><img class="shadow-lg rounded-bottom" src="./assets/img/demos/d20-2.jpg" srcset="./assets/img/demos/d20-2@2x.jpg 2x" alt="" /></a></figure>
+                        <figure class="itooltip itooltip-purple" title='<h5 class="mb-0">Click to see the demo</h5>'><a href="./demo20.html" target="_blank"><img class="shadow-lg rounded-bottom" src="https://i.hizliresim.com/l5p6m38.jpeg" srcset="https://i.hizliresim.com/l5p6m38.jpeg 2x" alt="" /></a></figure>
                       </div>
                       <!-- /column -->
                     </div>
@@ -527,7 +527,7 @@
                   </div>
                   <!-- /column -->
                   <div class="col-lg-5 d-none d-lg-block">
-                    <h2 class="post-title fs-30 mb-4">Demo Layout XX</h2>
+                    <h2 class="post-title fs-30 mb-4">Odalarımız</h2>
                     <ul class="icon-list bullet-purple row ms-0 gy-2">
                       <li class="col-md-6"><span><i class="uil uil-check"></i></span><span>Agency, Startup</span></li>
                       <li class="col-md-6"><span><i class="uil uil-check"></i></span><span>Framed layout</span></li>
