--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div class="row gx-2 gy-10 align-items-center">
           <div class="col-md-10 offset-md-1 offset-lg-0 col-lg-5 text-center text-lg-start order-2 order-lg-0" data-cues="slideInDown" data-group="page-title" data-delay="600">
             <h1 class="display-1 mb-5 mx-md-10 mx-lg-0"><span class="typer text-primary text-nowrap" data-delay="100" data-words="Kalmak,Zıbarmak,Ticaret Yapmak,Yemek Yemek."></span><span class="cursor text-primary" data-owner="typer"></span><br>için en iyi yer.</h1>
-            <p class="lead fs-23 mb-7">Build your website in minutes with the help of countless amazing features of Sandbox.</p>
+            <p class="lead fs-23 mb-7">Pro Kervansaray'da en iyi kervansaray deneyimini tatacağınızı iddia ediyoruz.</p>
             <div class="d-flex justify-content-center justify-content-lg-start mb-4" data-cues="slideInDown" data-group="page-title-buttons" data-delay="900">
               <span><a class="btn btn-lg btn-primary rounded-pill me-2 scroll" href="#demos">Check Demos</a></span>
             </div>
@@ -408,8 +408,8 @@
             <!-- /.row -->
             <div class="position-relative mt-n20 mb-20" data-cue="fadeIn" data-delay="1800">
               <div class="btn btn-circle btn-fuchsia disabled ripple position-absolute counter-wrapper flex-column d-none d-md-flex" style="bottom: 0; right: -8%; width: 120px; height: 120px;">
-                <h3 class="fs-26 text-white mt-n1 mb-0">Onaylı</h3>
-                <p>Demos</p>
+                <h3 class="fs-26 text-white mt-n1 mb-0">FSM</h3>
+                <p>Onaylı</p>
               </div>
             </div>
           </div>
