--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <h1 class="display-1 mb-5 mx-md-10 mx-lg-0"><span class="typer text-primary text-nowrap" data-delay="100" data-words="Kalmak,Zıbarmak,Ticaret Yapmak,Yemek Yemek."></span><span class="cursor text-primary" data-owner="typer"></span><br>için en iyi yer.</h1>
             <p class="lead fs-23 mb-7">Pro Kervansaray'da en iyi kervansaray deneyimini tatacağınızı iddia ediyoruz.</p>
             <div class="d-flex justify-content-center justify-content-lg-start mb-4" data-cues="slideInDown" data-group="page-title-buttons" data-delay="900">
-              <span><a class="btn btn-lg btn-primary rounded-pill me-2 scroll" href="#demos">Check Demos</a></span>
+              <span><a class="btn btn-lg btn-primary rounded-pill me-2 scroll" href="#demos">Odalarımız</a></span>
             </div>
           </div>
           <!-- /column -->
